feat: rename captcha header name, move it to parameters.yaml
